@@ -92,7 +92,7 @@ ERROR = !conversion of string 'nan' to type dbl failed.
 MAPI  = (monetdb) /var/tmp/mtest-30808/.s.monetdb.35989
 QUERY = SELECT '' AS five, f.f1, truncate(f1) AS trunc_f1
            FROM FLOAT8_TBL f;
-ERROR = !SELECT: no such unary operator 'truncate(double)'
+ERROR = !syntax error, unexpected TRUNCATE in: "select '' as five, f.f1, truncate"
 MAPI  = (monetdb) /var/tmp/mtest-30808/.s.monetdb.35989
 QUERY = SELECT |/ cast('64' as double) AS eight;
 ERROR = !syntax error, unexpected '|' in: "select |"
